# xmms-timidity

./: AUTHORS  Makefile.am  README  configure.ac  ui.glade  xmms-timidity.spec.in
src/: Makefile.am  interface.c  xmms-timidity.c  xmms-timidity.h
